Added better render support and TODOs